--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
               id="select"
               class="form-control"
               multiple
+              data-native-menu="false"
             >
           
           </select>
