--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
               id="select"
               class="form-control"
               multiple
+              size="0"
             >
           
           </select>
