--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <select
               id="select"
               class="form-control"
+              multiple
               size="8"
             >
           
