--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               id="select"
               class="form-control"
               multiple
-              size="8"
+              overflow: hidden;
             >
           
           </select>
